--- a/login/css/style.css
+++ b/login/css/style.css
@@ -2,11 +2,11 @@ body{
     background-color:  rgb(235, 235, 235);
     width: 100%;
     margin: auto;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .contenedor_login{
-    width: 750px;
+    width: 850px;
     height: 500px;
     margin: 5% 22%;
     background-color: #FFFFFF;
@@ -28,10 +28,17 @@ body{
 }
 
 .img_coepris{
-    width: 100%;
+    width: 95%;
     height: 100%;
     border-radius: 0% 3% 3% 0%;
+    margin-left: 5%;
 }
+
+.recuperar{
+    font-size: 11px;
+    text-align: center;
+}
+
 
 input{
     border:none;
@@ -75,4 +82,9 @@ label{
 .boton_login:hover{
     background-color: rgb(151, 201, 60);
     color: black;
+}
+
+.pie{
+    color: red;
+    background-color: gray;
 }
